Wed Feb 19 18:51:06 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/functions.c libxslt/xslt.c: fixed bug 106251

Wed Feb 19 15:52:33 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* xsltproc/xsltproc.c: obsoleted xmlNormalizeWindowsPath
	* win32/configure.js: included handling of the trio option

Mon Feb 10 17:34:32 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: preparing release 1.0.26

Fri Feb  7 15:47:20 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.c: fixing another bug in document(), bug #105450
	* tests/documents/test_bad.result: Slight change to the output

Fri Feb  7 15:34:24 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.c: fixing a segfault in document(), bug #105418
	* tests/documents/Makefile.am tests/documents/test_bad: add the
	  specific test as suggested by Jean T Anderson

Fri Feb  7 14:18:40 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c libxslt/keys.c libxslt/pattern.c
	  libxslt/preproc.c libxslt/transform.c libxslt/variables.c
	  libxslt/xslt.c: tried to fix 105387 and all similar cases
	  in the library sources.

Wed Feb  5 16:04:10 CET 2003 Daniel Veillard <daniel@veillard.com>

	* doc/* configure.in: preparing for release of 1.0.25

Wed Feb  5 00:07:43 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: fixed bug #99623

Tue Feb  4 22:10:17 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #105116 sometimes one need
	  to generate a default namespace reset xmlns="" in the output
	* tests/docs/Makefile.am tests/docs/bug-103.xml
	  tests/general/Makefile.am tests/general/bug-103*: added the
	  example in the regression tests for this case

Tue Feb  4 18:39:35 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/transform.c: changed the way the
	  root element of value tree are handled to fix bug #104123
